@@ -1,5 +1,4 @@
 #!/bin/sh
-# Depending on the architecture, symlink in the correct tap_stubs file.
 
 OS=`uname -s`
 
@@ -11,16 +10,4 @@ armv7l)
 amd64|x86_64)
   CFLAGS="${CFLAGS} -fPIC"
   ;;
-esac
-
-case "$OS" in
-FreeBSD|Darwin)
-  ln -nsf tap_stubs_macosx.c lib/tap_stubs_os.c
-  ;;
-Linux)
-  ln -nsf tap_stubs_linux.c lib/tap_stubs_os.c
-  ;;
-*)
-  echo Unknown arch $OS
-  exit 1
 esac
